--- a/templates/pages/ingredient/edit.html.twig
+++ b/templates/pages/ingredient/edit.html.twig
@@ -27,7 +27,7 @@
 		</div>
 
 		<div class="form-group">
-			{{ form_row(form.submit) }}
+			{{ form_row(form.update) }}
 		</div>
 		{{ form_end(form) }}
 	</div>
